WindGroup Dev/src/objects/COA_FY_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Balance__c</fullName>
        <formula>(Budget_Amount__c  - PO_Issued__c  -  PO_Pending__c) +  PO_Closed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Budget Amount - PO Issued - PO Pending) + PO Closed Amount</inlineHelpText>
        <label>Budget Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Category__c</fullName>
        <formula>TEXT ( Operational_Budget__r.Budget_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Line__c</fullName>
        <formula>TEXT ( Operational_Budget__r.Budget_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <formula>TEXT( Operational_Budget__r.Budget_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Account_Type__c</fullName>
        <formula>TEXT ( Operational_Budget__r.COA_Master__r.Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Master__c</fullName>
        <formula>Operational_Budget__r.COA_Master__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA Master</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Operational_Budget__r.Company_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>TEXT( Operational_Budget__r.Department__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipLabel>COA FY Balance</relationshipLabel>
        <relationshipName>COA_FY_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operational_Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operational Budget</label>
        <referenceTo>Operational_Budget__c</referenceTo>
        <relationshipLabel>COA FY Balance</relationshipLabel>
        <relationshipName>COA_FY_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Closed_Amount__c</fullName>
        <label>PO Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Issued__c</fullName>
        <label>PO Issued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Pending__c</fullName>
        <label>PO Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>COA FY Balance</label>
    <nameField>
        <displayFormat>COA Bal-{000000}</displayFormat>
        <label>COA Bal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COA FY Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>